# reporter

./: build.py  manual_spec.yml
qmanual/: README.md  pyproject.toml
qmanual/src/qmanual/: cli.py  generator.py  spec.py
qmanual/src/qmanual/templates/: index_qmd.j2  page_qmd.j2  quarto_yml_website.j2
